<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimary"
    tools:context=".ui.activities.MainActivityDetails">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/ColorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:padding="12dp"
                android:id="@+id/back_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_arrow_back_toobar" />

            <TextView
                android:fontFamily="@font/roboto_medium"
                android:gravity="start|center|top|left"
                android:id="@+id/title_toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textColor="@color/white" />
        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/margarita"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/pImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_baseline_image_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/instructions"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/description"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/glass"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/pGlass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/serve_cocktail_glass"
            android:textSize="15sp" />

    </LinearLayout>


</RelativeLayout>